--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 				<div class="signup-popup">
 					<div class="mailchimp">
 						<div id="mc_embed_signup">
-							<form action="//github.us14.list-manage.com/subscribe/post?u=3e394ca01b95d97f157c72e12&amp;id=7a595cd258" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate trial-pack-validate" target="_blank" novalidate>
+							<form id="trial-subscribe-form" action="//github.us14.list-manage.com/subscribe/post-json?u=3e394ca01b95d97f157c72e12&amp;id=7a595cd258" method="get">
 						    	<div id="mc_embed_signup_scroll">
 									<p class="pop-up-title">Get your trial pack</p>
 									<div class="indicates-required">
 										By filling up this form, we will reach you shortly. Don't worry we won't spam you
 									</div>
 									<div class="mc-field-group">
-										<input type="text" value="" name="NAME" class="required mailchimp-input" id="mce-NAME" placeholder="Name">
+										<input type="text" value="" name="NAME" class="required mailchimp-input" id="name" placeholder="Name">
 									</div>
 									<div class="mc-field-group">
-										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="mce-EMAIL" placeholder="Email">
+										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="email" placeholder="Email">
 									</div>
 									<div class="mc-field-group size1of2">
-										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="mce-MMERGE3" placeholder="Whatsapp No. (Optional)">
+										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="whatsapp" placeholder="Whatsapp No. (Optional)">
 									</div>
 						    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e394ca01b95d97f157c72e12_7a595cd258" tabindex="-1" value=""></div>
 						    		<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
@@ -40,12 +40,15 @@
 					</div>
 				</div>
 				<div class="thank-you">
-					<h1>Thank You for subscribing us</h1>
+					<h1 id="thank-you-title"></h1>
 					<div class="indicates-required">
-						We'll get back to you within 24 hours.
+
 					</div>
 					<div class="close-btn">
 						<p>Close</p>
+					</div>
+					<div class="return-btn">
+						<p>Try again</p>
 					</div>
 				</div>
 			</div>
@@ -57,26 +60,30 @@
 				<div class="signup-popup">
 					<div class="mailchimp">
 						<div id="mc_embed_signup">
-							<form action="//github.us14.list-manage.com/subscribe/post?u=3e394ca01b95d97f157c72e12&amp;id=72e726c12e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							<form id="standard-subscribe-form" action="//github.us14.list-manage.com/subscribe/post-json?u=3e394ca01b95d97f157c72e12&amp;id=72e726c12e" method="get">
 						    	<div id="mc_embed_signup_scroll">
-									<p class="pop-up-title">Get started with Standard pack</p>
+									<p class="pop-up-title">
+										Get started with Standard pack
+									</p>
 									<div class="indicates-required">
 										By filling up this form, we will reach you shortly. Don't worry we won't spam you
 									</div>
-									<div class="mc-field-group">
-										<input type="text" value="" name="NAME" class="required mailchimp-input" id="mce-NAME" placeholder="Name">
+									<div class="">
+										<input type="text" value="" name="NAME" class="required mailchimp-input" id="name" placeholder="Name">
 									</div>
-									<div class="mc-field-group">
-										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="mce-EMAIL" placeholder="Email">
+									<div class="">
+										<input type="email" value="" name="EMAIL" class="required email mailchimp-input" id="email" placeholder="Email">
 									</div>
-									<div class="mc-field-group">
-										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="mce-MMERGE3" placeholder="Whatsapp No. (Optional)">
+									<div class="">
+										<input type="text" name="MMERGE3" class="mailchimp-input" value="" id="whatsapp" placeholder="Whatsapp No. (Optional)">
 									</div>
-									<div class="mc-field-group">
-										<input type="text" value="" name="PCODE" class="mailchimp-input" id="mce-PCODE" placeholder="Promo Code">
+									<div class="">
+										<input type="text" value="" name="PCODE" class="mailchimp-input" id="promo-code" placeholder="Promo Code">
 									</div>
-						    		<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3e394ca01b95d97f157c72e12_7a595cd258" tabindex="-1" value=""></div>
-						    		<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="subscribe-button">
+						    		<div style="position: absolute; left: -5000px;" aria-hidden="true">
+						    			<input type="text" name="b_3e394ca01b95d97f157c72e12_7a595cd258" tabindex="-1" value="">
+						    		</div>
+						    		<input type="submit" value="Subscribe" name="subscribe" id="standard-submit" class="subscribe-button">
 						    		<p class="cancel">Cancel</p>
 						    	</div>
 							</form>
@@ -84,9 +91,12 @@
 					</div>
 				</div>
 				<div class="thank-you">
-					<h1>Thank You for subscribing us</h1>
+					<h1 id="thank-you-title">Thank You for subscribing us</h1>
 					<div class="indicates-required">
-						We'll get back to you within 24 hours.
+						<!-- We'll get back to you within 24 hours. -->
+					</div>
+					<div class="return-btn">
+						<p>Try Again</p>
 					</div>
 					<div class="close-btn">
 						<p>Close</p>
