--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										Get started with Standard pack
 									</p>
 									<div class="indicates-required">
-										By filling up this form, we will reach you shortly. Don't worry we won't spam you
+										By filling up this form, we will reach you shortly. Don't worry we won't spam you.
 									</div>
 									<div class="">
 										<input type="text" value="" name="NAME" class="required mailchimp-input" id="name" placeholder="Name">
@@ -91,7 +91,7 @@
 					</div>
 				</div>
 				<div class="thank-you">
-					<h1 id="thank-you-title">Thank You for subscribing us</h1>
+					<h1 id="thank-you-title">Thank You for subscribing us!</h1>
 					<div class="indicates-required">
 						<!-- We'll get back to you within 24 hours. -->
 					</div>
@@ -120,7 +120,7 @@
 	<div class="navbar desktop-navbar">
 		<ul>
 			<li><a class="about-btn" href="#about">About</a></li>
-			<li><a class="ingredient-btn" href="#ingredient">Ingredient</a></li>
+			<li><a class="ingredient-btn" href="#ingredient">Ingredients</a></li>
 			<li id="icon-list">
 				<img src="image/topblock_logo.png" alt="" class="main-logo">
 			</li>
@@ -140,7 +140,7 @@
 				</div>
 				<div id="standard-pack" class="btn-gold2 standard-pack">
 					<p class="btn-title">Standard Pack <span class="btn-kcal">400Kcal</span></p>
-					<p class="btn-desc">15 packs x 99g <span class="btn-price">RM165</span></p>
+					<p class="btn-desc">15 packs <span class="btn-price">RM165</span></p>
 				</div>
 
 			</div>
@@ -222,7 +222,7 @@
 				<div class="step step2">
 					<img src="image/howitworks_mixicon.png" alt="">
 					<p class="step-title">Mix</p>
-					<p class="step-description">Add 2 cups of water into the shaker</p>
+					<p class="step-description">Add 250-300ml of water into the shaker</p>
 				</div>
 				<div class="step step3">
 					<img src="image/howitworks_shakeicon.png" alt="">
@@ -311,7 +311,7 @@
 	<section id="purchase">
 		<div class="purchase">
 			<p class="section-title">Purchase</p>
-			<p class="section-description">The Finest of the Meal</p>
+			<p class="section-description">Start Replacing Your Skipped Meal</p>
 			<div class="trial">
 				<img src="image/purchase_trialpic3.png" alt="" class="purchase-img">
 				<div class="purchase-detail">
