added contact pafe

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
+	<div class="contact-us-btn">
+		<p>
+			<i class="fa fa-phone" aria-hidden="true"></i>
+		</p>
+		
+	</div>
 	<div id="#trial-popup" class="popup-background trial-popup">
 		<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 			<div class="flipper">
@@ -346,6 +353,31 @@
 	</section>
 	<section id="footer">
 		<div class="footer">
+			<div class="contact">
+				<p class="section-title">Contact Us</p>
+				<p class="section-description">Questions, advice or just want to say hello?</p>
+				<div class="contact-info">
+					<div class="contact-detail">
+						<p>
+							<i class="fa fa-phone" aria-hidden="true"></i>
+						</p>
+						<p>012 - 3456 7890</p>	
+					</div>
+					<div class="contact-detail">
+						<p>
+							<i class="fa fa-map-marker" aria-hidden="true"></i>
+						</p>
+						<p>207 S Broadway, Los Angeles, CA 90012, USA</p>
+					</div>
+					<div class="contact-detail contact-detail-last">
+						<p>
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</p>
+						<p>contact@macrolixir.com</p>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			</div>
 			<img src="image/topblock_logo.png" alt="" class="main-logo">
 			<p>COPYRIGHT @ MACROLIXIR.COM</p>
 
