--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="contact-us-btn">
 		<p>
-			<i class="fa fa-phone" aria-hidden="true"></i>
+			<i class="fa fa-envelope" aria-hidden="true"></i>
 		</p>
 	</div>
 	<div id="#trial-popup" class="popup-background trial-popup">
@@ -356,24 +356,14 @@
 				<p class="section-title">Contact Us</p>
 				<p class="section-description">Questions, advice or just want to say hello?</p>
 				<div class="contact-info">
-					<div class="contact-detail">
-						<p>
-							<i class="fa fa-phone" aria-hidden="true"></i>
-						</p>
-						<p>012 - 3456 7890</p>	
-					</div>
-					<div class="contact-detail">
-						<p>
-							<i class="fa fa-map-marker" aria-hidden="true"></i>
-						</p>
-						<p>207 S Broadway, Los Angeles, CA 90012, USA</p>
-					</div>
-					<div class="contact-detail contact-detail-last">
-						<p>
-							<i class="fa fa-envelope" aria-hidden="true"></i>
-						</p>
-						<p>contact@macrolixir.com</p>
-					</div>
+					<a href="mailto:artisan@macrolixir.com?Subject=Wassup" target="_blank">
+						<div class="contact-detail">
+							<p>
+								<i class="fa fa-envelope" aria-hidden="true"></i>
+							</p>
+							<p>artisan@macrolixir.com</p>
+						</div>
+					</a>
 					<div class="clearfix"></div>
 				</div>
 			</div>
