CTA copy update

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 						<div id="mc_embed_signup">
 							<form id="trial-subscribe-form" action="//github.us14.list-manage.com/subscribe/post-json?u=3e394ca01b95d97f157c72e12&amp;id=7a595cd258" method="get">
 						    	<div id="mc_embed_signup_scroll">
-									<p class="pop-up-title">Get your trial pack</p>
+									<p class="pop-up-title">Get your Trial Pack</p>
 									<div class="indicates-required">
-										By filling up this form, we will reach you shortly. Don't worry we won't spam you
+										Thank you for your interest! Our artisan will contact you shortly with the details.
 									</div>
 									<div class="mc-field-group">
 										<input type="text" value="" name="NAME" class="required mailchimp-input" id="name" placeholder="Name">
@@ -69,10 +69,10 @@
 							<form id="standard-subscribe-form" action="//github.us14.list-manage.com/subscribe/post-json?u=3e394ca01b95d97f157c72e12&amp;id=72e726c12e" method="get">
 						    	<div id="mc_embed_signup_scroll">
 									<p class="pop-up-title">
-										Get started with Standard pack
+										Get started with Standard Pack
 									</p>
 									<div class="indicates-required">
-										By filling up this form, we will reach you shortly. Don't worry we won't spam you.
+										Thank you for your interest! Our artisan will contact you shortly with the details.
 									</div>
 									<div class="">
 										<input type="text" value="" name="NAME" class="required mailchimp-input" id="name" placeholder="Name">
@@ -97,7 +97,7 @@
 					</div>
 				</div>
 				<div class="thank-you">
-					<h1 id="thank-you-title">Thank You for subscribing us!</h1>
+					<h1 id="thank-you-title">Thank You for your interest!</h1>
 					<div class="indicates-required">
 						<!-- We'll get back to you within 24 hours. -->
 					</div>
@@ -325,10 +325,9 @@
 						Get Your Trial Pack Now!
 					</p>
 					<p class="purchase-description">
-						This might be your first time hearing about Macrolixir, no worry.
-						Get yourself a trial pack and come back for more if you like it.
+						First time hearing Macrolixir? No worries! You can experience the conveniece and the aweseome effect of feeding your body with a nutritious meal with our Trial Pack. 
 					</p>
-					<div class="btn-gold btn-purchase" id="trial-btn">Connect to get a trial pack</div>
+					<div class="btn-gold btn-purchase" id="trial-btn">Connect to get a Trial Pack</div>
 					<p class="product-detail">* Consists of 3 packs of Macrolixir [400kcal]</p>
 				</div>
 				<div class="clearfix"></div>
@@ -337,14 +336,13 @@
 				<img src="image/purchase_weeklypic.png" alt="" class="purchase-img">
 				<div class="purchase-detail">
 					<p class="purchase-title">
-						Start being Healthy
+						Standard Pack / Subscribe!
 					</p>
 					<p class="purchase-description">
-						You might first time heard about Macrolixir, no worry.
-						Get yourself a trial pack and come back for more if you like it.
+						No more shitty alternative and skipping meals! Feed your body with proper nutritious in just 1 minute and stay productive at your peak!
 					</p>
-					<div class="btn-gold btn-purchase" id="standard-btn">Standard Pack - RM 165</div>
-					<p class="product-detail">* Consists of 15 packs of Macrolixir [400kcal]</p>
+					<div class="btn-gold btn-purchase" id="standard-btn">Standard Pack - RM 336</div>
+					<p class="product-detail">* Consists of 24 packs of Macrolixir [400kcal]</p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
