Minor copy change

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 				</div>
 				<div id="standard-pack" class="btn-gold2 standard-pack">
 					<p class="btn-title">Standard Pack <span class="btn-kcal">400Kcal</span></p>
-					<p class="btn-desc">15 packs <span class="btn-price">RM165</span></p>
+					<p class="btn-desc">24 packs <span class="btn-price">RM336</span></p>
 				</div>
 
 			</div>
@@ -196,7 +196,7 @@
 				<div class="sugar-box food-box">
 					<img src="image/ingredients_sugar.png" alt="" class="sugar-img">
 					<div class="ingredients-details sugar">
-						<p class="ingredient-name">Dextrose</p>
+						<p class="ingredient-name">Glucose</p>
 						<p class="ingredient-description">Fast carbohydrate for instant energy</p>
 					</div>
 
@@ -284,7 +284,7 @@
 							<p class="nutrition-value">50g</p>
 						</div>
 						<div class="nutrition-fact">
-							<p class="nutrition-type nutrition-subtype">Fast Carbs </p>
+							<p class="nutrition-type nutrition-subtype">Sugar</p>
 							<p class="nutrition-value">5g</p>
 						</div>
 						<div class="nutrition-fact">
@@ -336,7 +336,7 @@
 				<img src="image/purchase_weeklypic.png" alt="" class="purchase-img">
 				<div class="purchase-detail">
 					<p class="purchase-title">
-						Standard Pack / Subscribe!
+						Standard Pack
 					</p>
 					<p class="purchase-description">
 						No more shitty alternative and skipping meals! Feed your body with proper nutritious in just 1 minute and stay productive at your peak!
