--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 						Get Your Trial Pack Now!
 					</p>
 					<p class="purchase-description">
-						First time hearing Macrolixir? No worries! You can experience the conveniece and the aweseome effect of feeding your body with a nutritious meal with our Trial Pack. 
+						First time hearing Macrolixir? No worries! You can experience the convenience and the aweseome effect of feeding your body a nutritious meal with our Trial Pack. 
 					</p>
 					<div class="btn-gold btn-purchase" id="trial-btn">Connect to get a Trial Pack</div>
 					<p class="product-detail">* Consists of 3 packs of Macrolixir [400kcal]</p>
